--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,11 @@
-APP_NAME=Laravel
+APP_NAME="Contact Manager"
+APP_DESCRIPTION="A simple contact management application built with Laravel."
+APP_VERSION=1.0.0
+APP_AUTHOR="Ridwan Oladapo"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
